# linear-orchestrator

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: TUNNEL-MIGRATION.md  WARP-OZ-LINEAR-SETUP.md  WINDOWS-SETUP.md  WINDOWS-SETUP.zh-TW.md
linear_orchestrator/: __init__.py  broadcast.py  config.py  dashboard.py  parser.py  runner.py  server.py  session.py  sig.py  writer.py
linear_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: Check-LinearOrchestrator.ps1  Install-LinearOrchestratorWindows.ps1  LinearOrchestratorCommon.psm1  Start-LinearOrchestrator.ps1  Stop-LinearOrchestrator.ps1  ask-warp.ps1  install-windows-scheduled-task.cmd  install.sh  setup-warp-api.ps1  setup-warp-linear.ps1  start-orchestrator-at-login.ps1  start-windows-autostart.ps1  start-windows.ps1  start.sh  stop.sh  test.sh  update-tunnel-ingress.sh
skills/warp-oz-linear/: SKILL.md
systemd/: linear-orchestrator.service.tmpl
tests/: test_parser.py
